--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.7",
     "mysql": "^2.13.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^3.30.1",
+    "sequelize-cli": "^2.5.1",
+    "sqlite3": "^3.1.8"
   }
 }
